force-app/main/default/objects/CB_Relationship__c/CB_Relationship__c.object-meta.xml
<CustomObject>
    <description>Crunchbase Relationship Data (org_parents)</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>REL-{0000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>