force-app/main/default/objects/CB_Relationship__c/fields/Crunchbase_ID__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_ID__c</fullName>
    <externalId>true</externalId>
    <label>Crunchbase ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>