force-app/main/default/objects/CB_Relationship__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>