force-app/main/default/objects/CB_Relationship__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization</label>
    <referenceTo>CB_Organization__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>