force-app/main/default/objects/CB_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts with relation to Account</relationshipLabel>
    <relationshipName>RelatedAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>