force-app/main/default/objects/CB_Relationship__c/fields/Related_Organization__c.field-meta.xml
<CustomField>
    <fullName>Related_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Organization</label>
    <referenceTo>CB_Organization__c</referenceTo>
    <relationshipLabel>Organizations with relation to Organization</relationshipLabel>
    <relationshipName>RelatedOrganizations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>